<resources>
    <string name="app_name">SaveLocally_Android</string>
    
    <string name="main_modeTitle">保存方法の選択</string>

    <string name="preference_key">Preferenceのキー</string>
    <string name="preference_value">Preferenceの値</string>
    <string name="preference_save">保存</string>
    <string name="preference_load">読込</string>

    <string name="localfile_text">テキスト</string>
    <string name="localfile_save">保存</string>
    <string name="localfile_load">読込</string>
</resources>
